ros2_ws/log/build_2024-05-01_19-23-26/subscriber_pkg/stdout_stderr.log
running egg_info
writing ../../build/subscriber_pkg/subscriber_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/subscriber_pkg/subscriber_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/subscriber_pkg/subscriber_pkg.egg-info/entry_points.txt
writing requirements to ../../build/subscriber_pkg/subscriber_pkg.egg-info/requires.txt
writing top-level names to ../../build/subscriber_pkg/subscriber_pkg.egg-info/top_level.txt
reading manifest file '../../build/subscriber_pkg/subscriber_pkg.egg-info/SOURCES.txt'
writing manifest file '../../build/subscriber_pkg/subscriber_pkg.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/mford/ros2_ws/install/subscriber_pkg/lib/python3.10/site-packages/subscriber_pkg/subscriber.py to subscriber.cpython-310.pyc
running install_data
  File "/home/mford/ros2_ws/install/subscriber_pkg/lib/python3.10/site-packages/subscriber_pkg/subscriber.py", line 26
    main()def main():
          ^^^
SyntaxError: invalid syntax

running install_egg_info
removing '/home/mford/ros2_ws/install/subscriber_pkg/lib/python3.10/site-packages/subscriber_pkg-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/subscriber_pkg/subscriber_pkg.egg-info to /home/mford/ros2_ws/install/subscriber_pkg/lib/python3.10/site-packages/subscriber_pkg-0.0.0-py3.10.egg-info
running install_scripts
Installing subscriber script to /home/mford/ros2_ws/install/subscriber_pkg/lib/subscriber_pkg
writing list of installed files to '/home/mford/ros2_ws/build/subscriber_pkg/install.log'
